Added header and classroom/item booking

--- a/AssetManagementSystem/AssetManagementSystem/Bundle.config
+++ b/AssetManagementSystem/AssetManagementSystem/Bundle.config
@@ -3,5 +3,8 @@
   <styleBundle path="~/Content/css">
     <include path="~/Content/bootstrap.css" />
     <include path="~/Content/Site.css" />
+    <include path="~/Content/SiteMaster.css" />
+    <include path="~/Content/ClassroomBookingForm.css" />
+    <include path="~/Content/BookingStatus.css" />
   </styleBundle>
 </bundles>
