--- a/AssetManagementSystem/AssetManagementSystem/AssetManagementSystem.csproj
+++ b/AssetManagementSystem/AssetManagementSystem/AssetManagementSystem.csproj
@@ -179,7 +179,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="ClassroomBookingForm.aspx" />
+    <Content Include="ClassroomReservationForm.aspx" />
     <Content Include="Images\Adapter.png" />
     <Content Include="Images\building.jpg" />
     <Content Include="Images\chair.png" />
@@ -190,6 +190,7 @@
     <Content Include="Images\table.png" />
     <Content Include="Images\XMUM.png" />
     <Content Include="ItemBorrow.aspx" />
+    <Content Include="ItemBorrowingDetails.aspx" />
     <Content Include="ItemBorrowingForm.aspx" />
     <Content Include="BookingStatus.aspx" />
     <Content Include="bin\AssetManagementSystem.dll.config" />
@@ -211,6 +212,7 @@
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Release\AssetManagementSystem.csproj.CoreCompileInputs.cache" />
+    <Content Include="LoginHeaderFooter.Master" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="obj\Debug\AssetManagementSystem.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\AssetManagementSystem.dll" />
@@ -245,7 +247,6 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="Content\SiteMaster.css" />
-    <Content Include="Content\ClassroomBookingForm.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -292,6 +293,13 @@
     <Compile Include="ItemBorrow.aspx.designer.cs">
       <DependentUpon>ItemBorrow.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ItemBorrowingDetails.aspx.cs">
+      <DependentUpon>ItemBorrowingDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ItemBorrowingDetails.aspx.designer.cs">
+      <DependentUpon>ItemBorrowingDetails.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ItemIT.aspx.cs">
       <DependentUpon>ItemIT.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -305,6 +313,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LoginHeaderFooter.Master.cs">
+      <DependentUpon>LoginHeaderFooter.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LoginHeaderFooter.Master.designer.cs">
+      <DependentUpon>LoginHeaderFooter.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -328,12 +343,12 @@
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
-    <Compile Include="ClassroomBookingForm.aspx.cs">
-      <DependentUpon>ClassroomBookingForm.aspx</DependentUpon>
+    <Compile Include="ClassroomReservationForm.aspx.cs">
+      <DependentUpon>ClassroomReservationForm.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ClassroomBookingForm.aspx.designer.cs">
-      <DependentUpon>ClassroomBookingForm.aspx</DependentUpon>
+    <Compile Include="ClassroomReservationForm.aspx.designer.cs">
+      <DependentUpon>ClassroomReservationForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="ItemBorrowingForm.aspx.cs">
       <DependentUpon>ItemBorrowingForm.aspx</DependentUpon>
