Remove unnecessary comment

--- a/AssetManagementSystem/AssetManagementSystem/AssetManagementSystem.csproj
+++ b/AssetManagementSystem/AssetManagementSystem/AssetManagementSystem.csproj
@@ -398,11 +398,10 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50363</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44338/</IISUrl>
+          <IISUrl>http://localhost:53280</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
+          <CustomServerUrl>http://10.71.116.128</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
